--- a/config/default/config.json
+++ b/config/default/config.json
@@ -1,1 +1,8 @@
-{}
+{
+    "db": {
+        "host": "localhost",
+        "port": 5432,
+        "db_name": "flip",
+        "password": ""
+    }
+}
