--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: go
+
+notifications:
+    urls:
+        - "https://scalar.vector.im/api/neb/services/hooks/dHJhdmlzLWNpLyU0MEhFUjAlM0FtYXRyaXgub3JnLyUyMWZ4U0VPbnRWSG9sbWpxdU9oWiUzQWZsaXAuZWFydGg"
+    on_success: change
+    on_failure: always
+    on_start: never
+    on_cancel: never
